# Team_6_AERO62520_RSD_Project

./: FSM  README.md  box_detection.py  controller_that_worked.py  cube_detection_ros.py  cube_grasp.py  cube_pickup.py  cube_place.py  detection_grasping_todo.txt  grasp_test_interactive.py
CAD_files/: Arm mounting plate v7.step  L camera mount v6.step  LIDAR A2 mount v4_.step  NUC mounting plate v4.step  README.md
Task07_Manipulator_Setup/: ArmSetup.md  cube_detection_ros.py  cube_pickup.py
Task08_Mapping_and_Navigation/: MappingAndNavigation.md
Task08_Mapping_and_Navigation/src/install/: local_setup.sh  setup.sh
Task08_Mapping_and_Navigation/src/install/nav2_wfd/share/nav2_wfd/: package.sh
Task09_Object_Detection/: README.md  object_shape_color_depth.py  requirements.txt
good_manip/: cube_place.py
install/: local_setup.sh  setup.sh
install/leo_nav/share/ament_index/resource_index/package_run_dependencies/: leo_nav
install/leo_nav/share/ament_index/resource_index/parent_prefix_path/: leo_nav
install/leo_nav/share/leo_nav/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/leo_nav/share/leo_nav/cmake/: leo_navConfig-version.cmake  leo_navConfig.cmake
install/leo_nav/share/leo_nav/config/: amcl.yaml  navigation.yaml  navigation_stereo_camera.yaml  slam_toolbox.yaml
install/leo_nav/share/leo_nav/config/behavior_trees/: navigate_w_replanning_time.xml
install/leo_nav/share/leo_nav/environment/: ament_prefix_path.dsv  path.dsv
install/leo_nav/share/leo_nav/launch/: amcl.launch.py  navigation.launch.xml  slam_toolbox.launch.py
install/leo_nav/share/leo_nav/maps/: empty_map.pgm  empty_map.yaml
install/nav2_wfd/lib/nav2_wfd/: frontier_explore
install/nav2_wfd/share/nav2_wfd/: package.sh
log/: latest_build
src/leo_bringup/: CMakeLists.txt  package.xml
src/leo_bringup/launch/: full_fixed_nav.launch.py  full_slam.launch.py
src/leo_description/: CMakeLists.txt  CMakeLists.txt.save  package.xml
src/leo_description/config/: diff_drive_controllers.yaml
src/leo_description/urdf/: leo.gazebo.xacro  leo.urdf.xacro  leo.urdf.xacro.before_remove_visible
src/leo_gazebo/: package.xml  setup.cfg  setup.py
src/leo_gazebo/config/: bridge.yaml
src/leo_gazebo/launch/: bridge.launch.py  sim.launch.py
src/leo_gazebo/worlds/: my_world.world
src/leo_navigation/: CMakeLists.txt  package.xml
src/leo_navigation/config/: amcl_params_sim.yaml  nav2_params_sim.yaml  nav2_params_sim.yaml.bak
src/leo_navigation/launch/: nav2_slam.launch.py
src/log/: latest_build
