<?xml version="1.0"?>
<package format="2">
  <name>leo_description</name>
  <version>1.0.0</version>
  <description>URDF Description package for Leo Rover</description>

  <author>Błażej Sowa</author>
  <maintainer email="support@fictionlab.pl">fictionlab</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>