<?xml version="1.0"?>
<package format="3">
  <name>leo_navigation</name>
  <version>0.0.0</version>
  <description>Nav2 parameter tuning package for Leo Rover simulation.</description>

  <maintainer email="student41@todo.todo">student41</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_behaviors</exec_depend>
  <exec_depend>nav2_waypoint_follower</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
